@@ -1,4 +1,6 @@
 version 1.1.2:
+  * add maxZoom for increasing zoom range
+    - workaround camera preview initial location/size bug
   * add emulation for UI videoQuality to adjust camera resolution
   * fix several simulator-related bugs
     - fix device property missing from simulated ZBarReaderView
